--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -54,5 +54,29 @@ form-table-help = You must supply the information requested in order to create \
                   a connection object.
 
 # Table name
-inp-tbl-table-label = Table name
-inp-tbl-table-help = Name of the table in remote database
+inp-tbl-name-label = Table name
+inp-tbl-name-help = Table name to process data in the remote database
+
+# Table SQL
+inp-tbl-sql-label = Table SQL statement
+inp-tbl-sql-help = SQL statement to process data in the remote database
+
+# Table columns
+inp-tbl-columns-label = Table column names
+inp-tbl-columns-help = Specific columns of a table name or a table SQL
+
+# Table warehouse
+inp-tbl-warehouse-label = Data warehouse
+inp-tbl-warehouse-help = The root directory for data
+
+# Table datadir
+inp-tbl-datadir-label = Data directory
+inp-tbl-datadir-help = The sub-directory under warehouse for data
+
+# Table pcol
+inp-tbl-pcol-label = Partition column name
+inp-tbl-pcol-help = A specific column for data partition
+
+# Table boundary
+inp-tbl-boundary-label = Boundary query
+inp-tbl-boundary-help = The boundary query for data partition
