SQOOP-627: Convert forms structures on connector level to configuration classes (Jarek Jarcec Cecho)

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -23,28 +23,28 @@ form-connection-help = You must supply the information requested in order to \
                    create a connection object.
 
 # jdbc driver
-inp-conn-jdbcdriver-label = JDBC Driver Class
-inp-conn-jdbcdriver-help = Enter the fully qualified class name of the JDBC \
+jdbcDriver-label = JDBC Driver Class
+jdbcDriver-help = Enter the fully qualified class name of the JDBC \
                    driver that will be used for establishing this connection.
 
 # connect string
-inp-conn-connectstring-label = JDBC Connection String
-inp-conn-connectstring-help = Enter the value of JDBC connection string to be \
+connectionString-label = JDBC Connection String
+connectionString-help = Enter the value of JDBC connection string to be \
                    used by this connector for creating connections.
 
 # username string
-inp-conn-username-label = Username
-inp-conn-username-help = Enter the username to be used for connecting to the \
+username-label = Username
+username-help = Enter the username to be used for connecting to the \
                    database.
 
 # password string
-inp-conn-password-label = Password
-inp-conn-password-help = Enter the password to be used for connecting to the \
+password-label = Password
+password-help = Enter the password to be used for connecting to the \
                    database.
 
 # jdbc properties
-inp-conn-jdbc-properties-label = JDBC Connection Properties
-inp-conn-jdbc-properties-help = Enter any JDBC properties that should be \
+jdbcProperties-label = JDBC Connection Properties
+jdbcProperties-help = Enter any JDBC properties that should be \
                    supplied during the creation of connection.
 
 # Table From
@@ -54,29 +54,29 @@ form-table-help = You must supply the information requested in order to create \
                   a connection object.
 
 # Table name
-inp-tbl-name-label = Table name
-inp-tbl-name-help = Table name to process data in the remote database
+tableName-label = Table name
+tableName-help = Table name to process data in the remote database
 
 # Table SQL
-inp-tbl-sql-label = Table SQL statement
-inp-tbl-sql-help = SQL statement to process data in the remote database
+sql-label = Table SQL statement
+sql-help = SQL statement to process data in the remote database
 
 # Table columns
-inp-tbl-columns-label = Table column names
-inp-tbl-columns-help = Specific columns of a table name or a table SQL
+columns-label = Table column names
+columns-help = Specific columns of a table name or a table SQL
 
 # Table warehouse
-inp-tbl-warehouse-label = Data warehouse
-inp-tbl-warehouse-help = The root directory for data
+warehouse-label = Data warehouse
+warehouse-help = The root directory for data
 
 # Table datadir
-inp-tbl-datadir-label = Data directory
-inp-tbl-datadir-help = The sub-directory under warehouse for data
+dataDirectory-label = Data directory
+dataDirectory-help = The sub-directory under warehouse for data
 
 # Table pcol
-inp-tbl-pcol-label = Partition column name
-inp-tbl-pcol-help = A specific column for data partition
+partitionColumn-label = Partition column name
+partitionColumn-help = A specific column for data partition
 
 # Table boundary
-inp-tbl-boundary-label = Boundary query
-inp-tbl-boundary-help = The boundary query for data partition
+boundaryQuery-label = Boundary query
+boundaryQuery-help = The boundary query for data partition
