--- a/connector/connector-mysql-jdbc/src/main/resources/sqoopconnector.properties
+++ b/connector/connector-mysql-jdbc/src/main/resources/sqoopconnector.properties
@@ -14,5 +14,5 @@
 # limitations under the License.
 
 # MySQL JDBC COnnector Properties
-org.apache.sqoop.connector.class = org.apache.sqoop.connector.mysqljdbc.MySqlJdbcConnector
-org.apache.sqoop.connector.name = mysql-jdbc-connector
+#org.apache.sqoop.connector.class = org.apache.sqoop.connector.mysqljdbc.MySqlJdbcConnector
+#org.apache.sqoop.connector.name = mysql-jdbc-connector
