--- a/core/src/main/resources/framework-resources.properties
+++ b/core/src/main/resources/framework-resources.properties
@@ -22,9 +22,9 @@ form-security-label = Security related configuration options
 form-security-help = You must supply the information requested in order to \
                    create a job object.
 
-inp-conn-max-connections-label = Max connections
-inp-conn-max-connections-help = Maximal number of connections that this \
-                                connection object can use at one point in time
+maxConnections-label = Max connections
+maxConnections-help = Maximal number of connections that this \
+                      connection object can use at one point in time
 
 # Output From
 #
@@ -32,5 +32,5 @@ form-output-label = Output configuration
 form-output-help = You must supply the information requested in order to \
                    get information where you want to store your data.
 
-inp-conn-output-format-label = Output format
-inp-conn-output-format-help = Output format that should be used
+outputFormat-label = Output format
+outputFormat-help = Output format that should be used
