SQOOP-666 Introduce execution engine (Jarek Jarcec Cecho)

--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,7 @@ limitations under the License.
     <module>client</module>
     <module>docs</module>
     <module>connector</module>
+    <module>execution</module>
     <module>submission</module>
     <module>dist</module>
   </modules>
