--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,7 @@ limitations under the License.
                   <exclude>.idea/</exclude>
                   <exclude>*.iml</exclude>
                   <exclude>*.log</exclude>
+                  <exclude>**/nb-configuration.xml</exclude>
                 </excludes>
               </configuration>
             </execution>
