--- a/core/src/main/resources/framework-resources.properties
+++ b/core/src/main/resources/framework-resources.properties
@@ -32,8 +32,12 @@ form-output-label = Output configuration
 form-output-help = You must supply the information requested in order to \
                    get information where you want to store your data.
 
-outputFormat-label = Output format
-outputFormat-help = Output format that should be used
+storageType-label = Storage type
+storageType-help = Target on Hadoop ecosystem where to store data
 
 outputDirectory-label = Output directory
 outputDirectory-help = Output directory for final data
+
+ignored-label = Ignored
+ignored-help = This value is ignored
+
