SQOOP-662 Introduce pluggable configuration objects (Jarek Jarcec Cecho)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -18,6 +18,6 @@
 ############################
 # Security Form
 #
-object-name-label = Name
-object-name-help = Non unique name of the entity to help you remember \
+object-name.label = Name
+object-name.help = Non unique name of the entity to help you remember \
                    it's purpose
