--- a/core/src/main/resources/framework-resources.properties
+++ b/core/src/main/resources/framework-resources.properties
@@ -18,26 +18,26 @@
 ############################
 # Security Form
 #
-form-security-label = Security related configuration options
-form-security-help = You must supply the information requested in order to \
+security.label = Security related configuration options
+security.help = You must supply the information requested in order to \
                    create a job object.
 
-maxConnections-label = Max connections
-maxConnections-help = Maximal number of connections that this \
+security.maxConnections.label = Max connections
+security.maxConnections.help = Maximal number of connections that this \
                       connection object can use at one point in time
 
 # Output From
 #
-form-output-label = Output configuration
-form-output-help = You must supply the information requested in order to \
+output.label = Output configuration
+output.help = You must supply the information requested in order to \
                    get information where you want to store your data.
 
-storageType-label = Storage type
-storageType-help = Target on Hadoop ecosystem where to store data
+output.storageType.label = Storage type
+output.storageType.help = Target on Hadoop ecosystem where to store data
 
-outputDirectory-label = Output directory
-outputDirectory-help = Output directory for final data
+output.outputDirectory.label = Output directory
+output.outputDirectory.help = Output directory for final data
 
-ignored-label = Ignored
-ignored-help = This value is ignored
+output.ignored.label = Ignored
+output.ignored.help = This value is ignored
 
