--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -18,69 +18,72 @@
 ############################
 # Connection Form
 #
-form-connection-label = Configuration configuration
-form-connection-help = You must supply the information requested in order to \
+connection.label = Configuration configuration
+connection.help = You must supply the information requested in order to \
                    create a connection object.
 
 # jdbc driver
-jdbcDriver-label = JDBC Driver Class
-jdbcDriver-help = Enter the fully qualified class name of the JDBC \
+connection.jdbcDriver.label = JDBC Driver Class
+connection.jdbcDriver.help = Enter the fully qualified class name of the JDBC \
                    driver that will be used for establishing this connection.
 
 # connect string
-connectionString-label = JDBC Connection String
-connectionString-help = Enter the value of JDBC connection string to be \
+connection.connectionString.label = JDBC Connection String
+connection.connectionString.help = Enter the value of JDBC connection string to be \
                    used by this connector for creating connections.
 
 # username string
-username-label = Username
-username-help = Enter the username to be used for connecting to the \
+connection.username.label = Username
+connection.username.help = Enter the username to be used for connecting to the \
                    database.
 
 # password string
-password-label = Password
-password-help = Enter the password to be used for connecting to the \
+connection.password.label = Password
+connection.password.help = Enter the password to be used for connecting to the \
                    database.
 
 # jdbc properties
-jdbcProperties-label = JDBC Connection Properties
-jdbcProperties-help = Enter any JDBC properties that should be \
+connection.jdbcProperties.label = JDBC Connection Properties
+connection.jdbcProperties.help = Enter any JDBC properties that should be \
                    supplied during the creation of connection.
 
 # Table From
 #
-form-table-label = Database configuration
-form-table-help = You must supply the information requested in order to create \
+table.label = Database configuration
+table.help = You must supply the information requested in order to create \
                   a connection object.
 
 # Table name
-tableName-label = Table name
-tableName-help = Table name to process data in the remote database
+table.tableName.label = Table name
+table.tableName.help = Table name to process data in the remote database
 
 # Table SQL
-sql-label = Table SQL statement
-sql-help = SQL statement to process data in the remote database
+table.sql.label = Table SQL statement
+table.sql.help = SQL statement to process data in the remote database
 
 # Table columns
-columns-label = Table column names
-columns-help = Specific columns of a table name or a table SQL
+table.columns.label = Table column names
+table.columns.help = Specific columns of a table name or a table SQL
 
 # Table warehouse
-warehouse-label = Data warehouse
-warehouse-help = The root directory for data
+table.warehouse.label = Data warehouse
+table.warehouse.help = The root directory for data
 
 # Table datadir
-dataDirectory-label = Data directory
-dataDirectory-help = The sub-directory under warehouse for data
+table.dataDirectory.label = Data directory
+table.dataDirectory.help = The sub-directory under warehouse for data
 
 # Table pcol
-partitionColumn-label = Partition column name
-partitionColumn-help = A specific column for data partition
+table.partitionColumn.label = Partition column name
+table.partitionColumn.help = A specific column for data partition
 
 # Table boundary
-boundaryQuery-label = Boundary query
-boundaryQuery-help = The boundary query for data partition
+table.boundaryQuery.label = Boundary query
+table.boundaryQuery.help = The boundary query for data partition
 
 # Placeholders to have some entities created
-ignored-label = Ignored
-ignored-help = This is completely ignored
+ignored.label = Ignored
+ignored.help = This is completely ignored
+
+ignored.ignored.label = Ignored
+ignored.ignored.help = This is completely ignored
