--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,7 @@ limitations under the License.
                   <exclude>*.iml</exclude>
                   <exclude>*.log</exclude>
                   <exclude>**/nb-configuration.xml</exclude>
+                  <exclude>**.patch</exclude>
                 </excludes>
               </configuration>
             </execution>
