--- a/client/pom.xml
+++ b/client/pom.xml
@@ -40,7 +40,7 @@ limitations under the License.
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.3-SNAPSHOT</version>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
