--- a/server/pom.xml
+++ b/server/pom.xml
@@ -49,6 +49,7 @@ limitations under the License.
       <groupId>org.apache.sqoop.submission</groupId>
       <artifactId>sqoop-submission-mapreduce</artifactId>
       <version>2.0.0-SNAPSHOT</version>
+      <classifier>hadoop${hadoop.profile}</classifier>
     </dependency>
 
     <dependency>
