SQOOP-735 Introduce output format option to Sqoop import (Jarek Jarcec Cecho)

--- a/core/src/main/resources/framework-resources.properties
+++ b/core/src/main/resources/framework-resources.properties
@@ -35,6 +35,9 @@ output.help = You must supply the information requested in order to \
 output.storageType.label = Storage type
 output.storageType.help = Target on Hadoop ecosystem where to store data
 
+output.outputFormat.label = Output format
+output.outputFormat.help = Format in which data should be serialized
+
 output.outputDirectory.label = Output directory
 output.outputDirectory.help = Output directory for final data
 
