SQOOP-740 Provide export submission implementation (Jarek Jarcec Cecho)

--- a/core/src/main/resources/framework-resources.properties
+++ b/core/src/main/resources/framework-resources.properties
@@ -44,6 +44,14 @@ output.outputDirectory.help = Output directory for final data
 output.ignored.label = Ignored
 output.ignored.help = This value is ignored
 
+# Input Form
+#
+input.label = Input configuration
+input.help = Specifies information required to get data from Hadoop ecosystem
+
+input.inputDirectory.label = Input directory
+input.inputDirectory.help = Directory that should be exported
+
 # Throttling From
 #
 throttling.label = Throttling resources
