SQOOP-648: Move all string message in client to resource file for easy translation
(Venkat Ranganathan via Jarek Jarcec Cecho)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -21,3 +21,147 @@
 object-name.label = Name
 object-name.help = Non unique name of the entity to help you remember \
                    it's purpose
+
+
+#############################
+# Messages
+#
+#  Missing args
+#
+args.xid_missing = Required argument --xid is missing.
+args.jid_missing = Required argument --jid is missing.
+args.cid_missing = Required argument --cid is missing.
+args.type_missing = Required argument --type is missing.
+args.name_missing = Required argument --name is missing.
+args.value_missing = Required argument --value is missing.
+
+
+## Generic description of various ids, types etc
+prmpt.conn_id = Connection ID
+prompt.connector_id = Connector ID
+prompt.job_id = Job ID
+prompt.job_type = Job type
+
+## Prompt messages for updating, filling metadata info
+
+prompt.update_conn_metadata = Please update connection metadata:
+prompt.update_job_metadata = Please update job metadata:
+prompt.fill_conn_metadata = Please fill following values to create new \
+connection object
+prompt.fill_job_metadata = Please fill following values to create new \
+job object
+
+
+
+
+## Updating messages
+updating.conn = Updating connection with id {0}
+updating.job = Updating job with id {0}
+
+#
+# Clone command
+clone.usage = Usage: clone {0}
+clone.conn_successful = Connection was successfully created with validation \
+  status {0} and persistent id {1}
+clone.job_successful = Job was successfully created with validation \
+  status {0} and persistent id {1}
+clone.cloning_conn = Cloning connection with id {0}
+clone.cloning_job = Cloning job with id {0}
+
+#
+# Create command
+create.usage = Usage: create {0}
+create.conn_successful = New connection was successfully created with \
+  validation status {0} and persistent id {1}
+create.job_successful = New job was successfully created with validation \
+  status {0}  and persistent id {1}
+## Creating messages
+create.creating_conn = Creating connection for connector with id {0}
+create.creating_job = Creating job for connection with id {0}
+
+#
+# Delete command
+delete.usage = Usage: delete {0}
+
+
+#
+# Help command
+help.usage = [<command>]
+help.description = Display this help message
+help.cmd_usage = Usage: @|bold {0} |@ {1}
+help.message = Display the list of commands or the help text for \
+ @|bold command|@.
+help.info = For information about @|green Sqoop|@, visit: \
+  @|cyan http://sqoop.apache.org/|@
+help.avail_commands = Available commands:
+help.cmd_description =  @|bold {0} ({1}|@) {2}
+help.specific_cmd_info = For help on a specific command type: \
+  help @|bold command|@
+
+unrecognized.cmd = Unrecognized command {0}
+
+#
+# Set command
+set.usage = Usage: set {0}
+set.prompt_opt_name = Client option name
+set.prompt_opt_value = New option value
+set.verbose_changed = Verbose option was changed to {0}
+set.unknown_opt_ignored = Unknown option {0}. Ignoring...
+set.host_description = Host name to invoke server resources
+set.port_description = Port number to invoke server resources
+set.webapp_description = Web app to invoke server resources
+set.server_usage = Usage: set server
+set.server_successful = Server is set successfully
+
+
+show.usage = Usage: show {0}
+
+show.prompt_display_all_conns = Display all connections
+show.prompt_display_conn_xid = Display the connection with xid
+show.conn_usage = Usage: show connection
+show.prompt_conns_to_show = @|bold {0} connection(s) to show: |@
+show.prompt_conn_info = Connection with id {0} and name: ${1}
+
+show.prompt_display_all_connectors = Display all connectors
+show.prompt_display_connector_cid = Display the connector with xid
+show.connector_usage = Usage: show connector
+show.prompt_connectors_to_show = @|bold {0} connection(s) to show: |@
+show.prompt_connector_info = Connector with id {0}:\n  Name: ${1} \n \
+Class: {2}\n  Version: {3}
+
+show.framework_usage = Usage: show framework
+show.prompt_framework_opts = @|bold Framework specific options: |@\nPersistent id: {0}
+
+show.prompt_display_all_jobs = Display all jobs
+show.prompt_display_job_jid = Display jobwith given jid
+show.job_usage = Usage: show job
+show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
+show.prompt_job_info = Job with id {0} and name: ${1}
+
+show.prompt_display_all_servers = Display all server information
+show.prompt_display_server_host = Display server host name
+show.prompt_display_server_port = Display server port number
+show.prompt_display_server_webapp = Display server web app name
+show.server_usage = Usage: show server
+show.prompt_server_host = @|bold Server host:|@ {0}
+show.prompt_server_port = @|bold Server port:|@ {0}
+show.prompt_server_webapp = @|bold Server webapp:|@ {0}
+
+show.prompt_display_all_versions = Display all versions
+show.prompt_display_version_server = Display server version
+show.prompt_display_version_client = Display client version
+show.prompt_display_version_protocol = Display protocol version
+show.version_usage = Usage: show version
+show.prompt_version_client_server = @|bold {0} version:|@\n  Sqoop {1} \
+revision {2} \n  Compiled by {3} on {4}
+show.prompt_version_protocol = @|bold Protocol version:|@\n  {0}
+
+sqoop.shell_banner = @|green Sqoop Shell:|@ Type '@|bold help|@' or '@|bold \h|@' for help.
+sqoop.prompt_shell_loadrc = Loading resource file {0}
+sqoop.prompt_shell_loadedrc = Resource file loaded.
+
+submission.usage = Usage: submission {0}
+
+update.usage = Usage: update {0}
+update.conn_successful = Connection was successfully updated with status {0}
+update.job_successful = Job was successfully updated with status {0}
