SQOOP-764: Fix typo in client resource file "prompt.conn_id"
(Jarek Jarcec Cecho via Cheolsoo Park)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -37,7 +37,7 @@ args.value_missing = Required argument --value is missing.
 
 
 ## Generic description of various ids, types etc
-prmpt.conn_id = Connection ID
+prompt.conn_id = Connection ID
 prompt.connector_id = Connector ID
 prompt.job_id = Job ID
 prompt.job_type = Job type
