SQOOP-766: Fix client resources
(Jarek Jarcec Cecho via Cheolsoo Park)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -51,19 +51,20 @@ connection object
 prompt.fill_job_metadata = Please fill following values to create new \
 job object
 
-
-
-
-## Updating messages
-updating.conn = Updating connection with id {0}
-updating.job = Updating job with id {0}
+#
+# Update command
+update.conn = Updating connection with id {0}
+update.job = Updating job with id {0}
+update.usage = Usage: update {0}
+update.conn_successful = Connection was successfully updated with status {0}
+update.job_successful = Job was successfully updated with status {0}
 
 #
 # Clone command
 clone.usage = Usage: clone {0}
-clone.conn_successful = Connection was successfully created with validation \
+clone.conn.successful = Connection was successfully created with validation \
   status {0} and persistent id {1}
-clone.job_successful = Job was successfully created with validation \
+clone.job.successful = Job was successfully created with validation \
   status {0} and persistent id {1}
 clone.cloning_conn = Cloning connection with id {0}
 clone.cloning_job = Cloning job with id {0}
@@ -82,7 +83,6 @@ create.creating_job = Creating job for connection with id {0}
 #
 # Delete command
 delete.usage = Usage: delete {0}
-
 
 #
 # Help command
@@ -120,13 +120,13 @@ show.prompt_display_all_conns = Display all connections
 show.prompt_display_conn_xid = Display the connection with xid
 show.conn_usage = Usage: show connection
 show.prompt_conns_to_show = @|bold {0} connection(s) to show: |@
-show.prompt_conn_info = Connection with id {0} and name: ${1}
+show.prompt_conn_info = Connection with id {0} and name: {1}
 
 show.prompt_display_all_connectors = Display all connectors
 show.prompt_display_connector_cid = Display the connector with xid
 show.connector_usage = Usage: show connector
 show.prompt_connectors_to_show = @|bold {0} connection(s) to show: |@
-show.prompt_connector_info = Connector with id {0}:\n  Name: ${1} \n \
+show.prompt_connector_info = Connector with id {0}:\n  Name: {1} \n \
 Class: {2}\n  Version: {3}
 
 show.framework_usage = Usage: show framework
@@ -136,7 +136,7 @@ show.prompt_display_all_jobs = Display all jobs
 show.prompt_display_job_jid = Display jobwith given jid
 show.job_usage = Usage: show job
 show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
-show.prompt_job_info = Job with id {0} and name: ${1}
+show.prompt_job_info = Job with id {0} and name: {1}
 
 show.prompt_display_all_servers = Display all server information
 show.prompt_display_server_host = Display server host name
@@ -161,7 +161,3 @@ sqoop.prompt_shell_loadrc = Loading resource file {0}
 sqoop.prompt_shell_loadedrc = Resource file loaded.
 
 submission.usage = Usage: submission {0}
-
-update.usage = Usage: update {0}
-update.conn_successful = Connection was successfully updated with status {0}
-update.job_successful = Job was successfully updated with status {0}
