SQOOP-758: Generate documentation in package goal
(Jarek Jarcec Cecho via Cheolsoo Park)

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -85,6 +85,18 @@ limitations under the License.
                 </plugin>
               </reportPlugins>
             </configuration>
+
+            <!-- Configure generating documentation alongside with package -->
+            <executions>
+              <execution>
+                <id>packaging-documentation</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+              </execution>
+            </executions>
+
           </plugin>
         </plugins>
       </build>
